--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -5374,6 +5374,10 @@ msgstr "news items"
 msgid "ADD_NEWS_ITEM"
 msgstr "Add news item"
 
+#: news/templates/news/edit.html news/templates/news/list.html
+msgid "REMOVE_SELECTED_NEWS_ITEMS"
+msgstr "Remove selected news items"
+
 #: news/templates/news/list.html
 msgid "NEWS"
 msgstr "News"
