Implement git manager link

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -2723,6 +2723,10 @@ msgid "EDIT_GITMANAGER_DESCRIPTION"
 msgstr "This action will update the course instance settings on Git manager."
 
 #: edit_course/templates/edit_course/edit_gitmanager.html
+msgid "GO_TO_GITMANAGER_PAGE"
+msgstr "Open the gitmanager page"
+
+#: edit_course/templates/edit_course/edit_gitmanager.html
 msgid "UPDATING_GITMANAGER"
 msgstr "Updating Git manager..."
 
