--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -2738,8 +2738,8 @@ msgid "EDIT_GITMANAGER_DESCRIPTION"
 msgstr "Tämä toiminto päivittää kurssikerran asetuksia Git managerissa."
 
 #: edit_course/templates/edit_course/edit_gitmanager.html
-msgid "GO_TO_GITMANAGER_PAGE"
-msgstr "Mene gitmanager sivulle"
+msgid "OPEN_IN_GITMANAGER"
+msgstr "Avaa Git managerissa"
 
 #: edit_course/templates/edit_course/edit_gitmanager.html
 msgid "UPDATING_GITMANAGER"
