--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -2731,6 +2731,10 @@ msgid "EDIT_GITMANAGER_DESCRIPTION"
 msgstr "This action will update the course instance settings on Git manager."
 
 #: edit_course/templates/edit_course/edit_gitmanager.html
+msgid "OPEN_IN_GITMANAGER"
+msgstr "Open in Git manager"
+
+#: edit_course/templates/edit_course/edit_gitmanager.html
 msgid "UPDATING_GITMANAGER"
 msgstr "Updating Git manager..."
 
