Adjust UI for adding new submission tags in assesment panel - Increased padding - Implemented wrapping for tags - Changed dropdown appearance

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -2909,6 +2909,14 @@ msgstr "No student tags."
 msgid "ADD_NEW_USER_TAGGING"
 msgstr "Add new user tagging"
 
+#: edit_course/templates/edit_course/submissiontagging_add.html
+msgid "ADD_NEW_SUBMISSION_TAGGING"
+msgstr "Add new submission tagging"
+
+#: exercise/forms.py exercise/templates/exercise/staff/_assessment_panel.html
+msgid "ADD_TAGGING"
+msgstr "Add tagging"
+
 #: edit_course/views.py
 msgid "ERROR_EXERCISE_CATEGORY_MUST_EXIST_BEFORE_CREATEING_EXERCISES"
 msgstr ""
