--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -2918,6 +2918,14 @@ msgstr "Ei opiskelijamerkintöjä."
 msgid "ADD_NEW_USER_TAGGING"
 msgstr "Merkitse opiskelijoita"
 
+#: edit_course/templates/edit_course/submissiontagging_add.html
+msgid "ADD_NEW_SUBMISSION_TAGGING"
+msgstr "Merkitse palautuksia"
+
+#: exercise/forms.py exercise/templates/exercise/staff/_assessment_panel.html
+msgid "ADD_TAGGING"
+msgstr "Lisää merkintä"
+
 #: edit_course/views.py
 msgid "ERROR_EXERCISE_CATEGORY_MUST_EXIST_BEFORE_CREATEING_EXERCISES"
 msgstr ""
