--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -403,6 +403,10 @@ msgid "LABEL_VISIBLE_TO_STUDENTS"
 msgstr "näkyy opiskelijoille"
 
 #: course/models.py
+msgid "LABEL_GROUP_WORK_ALLOWED"
+msgstr "opiskelijat saavat luoda ryhmiä"
+
+#: course/models.py
 msgid "MODEL_NAME_USER_TAG"
 msgstr "käyttäjämerkintä"
 
