--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -1543,6 +1543,14 @@ msgstr "Tehtävä"
 msgid "LABEL_SUBMITTER_TAG"
 msgstr "Opiskelijamerkintä"
 
+#: edit_course/course_forms.py
+msgid "LABEL_SUBMISSION_TAGS"
+msgstr "Palautusmerkinnät"
+
+#: edit_course/course_forms.py
+msgid "LABEL_SUBMISSION_TAGS_HELPTEXT"
+msgstr "Kopioi palautusmerkinnät tästä kurssikerrasta."
+
 #: deviations/forms.py deviations/models.py exercise/submission_models.py
 msgid "LABEL_SUBMITTER"
 msgstr "Opiskelija"
