--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1253,6 +1253,40 @@ msgstr "Late submissions are allowed until %(deadline)s. "
 msgid "LATE_SUBMISSION_POINTS_WORTH -- %(percent)s"
 msgstr "However, points are only worth %(percent)s%%. "
 
+#: exercise/templates/exercise/_user_results.html
+msgid "POINTS_GOAL"
+msgstr "Points goal"
+
+#: exercise/templates/exercise/_user_results.html
+msgid "POINTS_GOAL_TOOLTIP"
+msgstr "Set a personal points goal for this module. This goal is only visible to you. Once the goal has been reached, the points progress bar changes color to blue."
+
+#: exercise/templates/exercise/save_personalized_points_goal.html
+msgid "PERSONALIZED_POINTS_MODAL_TITLE"
+msgstr "Set personalized points goal for module"
+
+#: exercise/templates/exercise/save_personalized_points_goal.html
+msgid "LABEL_POINTS_GOAL_INPUT"
+msgstr "Input personalized goal as percentage or points (e.g., 50% or 150)"
+
+#: exercise/templates/exercise/save_personalized_points_goal.html
+msgid "REQUIRED_POINTS"
+msgstr "Points required to pass for module"
+
+#: exercise/templates/exercise/save_personalized_points_goal.html
+msgid "PERSONALIZED_POINTS_MODAL_SUCCESS"
+msgstr "Succesfully set personalized points goal"
+
+#: exercise/templates/exercise/save_personalized_points_goal.html
+msgid "PERSONALIZED_POINTS_MODAL_FAILURE"
+msgstr "Failed to set personalized points goal"
+
+msgid "PERSONALIZED_POINTS_GOAL"
+msgstr "Points goal"
+
+msgid "PERSONALIZED_POINTS_MODAL_LESS_THAN_REQUIRED"
+msgstr "You cannot set the personalized points goal to be less than the points required to pass"
+
 #: course/templates/course/staff/_tag_remove_modal.html
 msgid "UNTAG_MULTIPLE_USERS"
 msgstr "Untag multiple users"
@@ -4079,6 +4113,7 @@ msgid "POINTS"
 msgstr "Points"
 
 #: exercise/templates/exercise/_points_progress.html
+#: exercise/templates/exercise/save_personalized_points_goal.html
 msgid "POINTS_TO_PASS"
 msgstr "Points to pass"
 
