Fix issues with show zero points immediately

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -2595,7 +2595,7 @@ msgstr "piilotettu"
 
 #: exercise/reveal_models.py
 msgid "LABEL_SHOW_ZERO_POINTS_IMMEDIATELY"
-msgstr "Show feedback immediately if the submission gets 0 points"
+msgstr "Näytä palaute välittömästi jos tehtäväpalautus saa 0 pistettä"
 
 #: edit_course/templates/edit_course/clone_instance.html
 msgid "CLONE_COURSE"
